add network badge
